--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,8 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.22",
+    "jotai": "^2.15.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.545.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
